- Add language flag in series summary
- Improve touch response routines
- Fix thumbnails disappearing on zoom
- Update AppImage and Electron workflow